filtrelemede problemi çözüldü

--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/userfilter/userfilter.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/userfilter/userfilter.component.html
@@ -10,5 +10,5 @@
     </div>
   </form>
   <button class="btn btn-success btn-sm mr-2" tooltip="Filtrele" (click)="onFilter()"><fa name="search"></fa></button>
-  <button class="btn btn-danger btn-sm" tooltip="Filtreleri Temizle"><fa name="close"></fa></button>
+  <button class="btn btn-danger btn-sm" tooltip="Filtreleri Temizle" (click)="onClearFilter()"><fa name="close"></fa></button>
 </filter>
