--- a/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
+++ b/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
@@ -125,7 +125,7 @@
                 <a class="dropdown-item" href="#">Ayarlar</a>
                 <a class="dropdown-item" href="#">Seçenekler</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item bg-danger" routerLink="/login">Çıkış</a>
+                <a class="dropdown-item bg-danger" (click)="logout()">Çıkış</a>
               </div>
             </li>
           </ul>
