--- a/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.css
+++ b/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.css
@@ -27,12 +27,21 @@
 #wrapper.toggled {
   padding-left: 250px;
 }
-
+.bgColor {
+  background: #1E2648;
+}
+.textColor{
+  color: darkgray !important ;
+}
+img {
+  width: 110px;
+  height: 32px
+}
 #sidebar-wrapper {
   z-index: 1000;
   position: fixed;
   left: 250px;
-  width: 0;
+  width: 50px;
   height: 100%;
   margin-left: -250px;
   overflow-y: auto;
@@ -114,7 +123,7 @@
     padding-left: 250px;
   }
   #sidebar-wrapper {
-    width: 0;
+    width: 50px;
   }
   #wrapper.toggled #sidebar-wrapper {
     width: 250px;
